[tool.poetry]
name = "dicomexport"
version = "0.1.0"
description = ""
authors = ["ClementPla <clement.playout@polymtl.ca>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.0"
tqdm = "^4.66.0"
pydicom = "2.4.4"
opencv-python-headless = "^4.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
